CommitTxnFunction refactor